[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration-server"
version = "0.1.0"
description = "Raspberry Pi CM5 dual CSI camera WebRTC streamer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4",
  "aiortc>=1.9,<2",
  "av>=12,<15",
  "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<2",
]

[project.scripts]
calibration-server = "calibration_server.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

